test/oscar/compiler/errors/invalidFunc.oscar
def invalidFunc(a: int; b: int) => int {
  return (a + b);
}

def main() => unit = {
  invalidFunc(1, 2);
}